--- a/css/stylesSplit.css
+++ b/css/stylesSplit.css
@@ -305,6 +305,14 @@ button:hover {
 
 
 /* display grid */
+
+/* display title background color */
+#display-titles > div {
+    background-color: #f0f0f0; /* Different background for title row */
+}
+  
+
+
 #display-titles {
     display: grid;
     grid-template-columns: 0.7fr 0.5fr 1.8fr;
@@ -315,22 +323,28 @@ button:hover {
 }
 
 #display-titles > div {
-    border: 3.5px solid;
     padding: 10px;
     text-align: center;
     margin-top: 30px;
-
+    border: 2px solid black;
+    border-top: 3px solid black;
+    border-bottom: 3px solid black;
 }
 
 
-/*columns between item and price and price and buyer*/
-#display-titles > div:not(:last-child) {
-    border-right: 0px solid; 
+/* Adds border to the left of the first cell */
+#display-titles > div:first-child {
+    border-left: 4px solid black;
 }
+
+/* Adds border to the right of the last cell */
+#display-titles > div:last-child {
+    border-right: 4px solid black;
+}
+
 
 
 #display-info > div {
-    border: 2px solid;
     border-top: none;
     padding: 10px;
     text-align: center;
